--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/plagiarism_analyzer
-spring.datasource.username=postgres
-spring.datasource.password=n4tj0yc3#
+spring.datasource.url=jdbc:postgresql://plagiarism-checker.c9t5hb8lsdiu.ap-southeast-1.rds.amazonaws.com:5432/plagiarism
+spring.datasource.username=pclient
+spring.datasource.password=nbkN6TF7d8TuHZdb
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
