--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+server.port=$PORT
 
 # Database Properties
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:5432/${DATABASE_NAME}
