--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,13 @@ dependencies {
 	testImplementation 'org.apache.httpcomponents:httpclient'
 }
 
+jar {
+	enabled = false
+	manifest {
+		attributes('Main-Class': 'com.algorithms.plagiarism.PlagiarismApplication')
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
