--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 #server limit
 server.tomcat.max-threads=5
+spring.security.user.password=jfgjsYUewiYbnUUgrePIhQhfhjsddiurhf
